--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,4 @@ img {
 @import url("./loading.css");
 @import url("./product.css");
 @import url("./product_details.css");
+@import url("./cart.css");
