added profile section with reset password and upload profile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,4 @@ img {
 @import url("./product.css");
 @import url("./product_details.css");
 @import url("./cart.css");
+@import url("./profile.css");
